Use galante_signature logo in navbar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <a href="/" class="navbar-brand navbar-brand-logo">
-        <img src="/images/logo.png" alt="Galante el Emperador" class="navbar-logo" onerror="this.style.display='none';this.nextElementSibling.style.display='inline';">
+        <img src="/images/galante_signature.png" alt="Galante el Emperador" class="navbar-logo" onerror="this.style.display='none';this.nextElementSibling.style.display='inline';">
         <span class="navbar-logo-fallback" style="display:none;">Galante</span>
     </a>
     <ul class="navbar-nav">
