--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -14,6 +14,7 @@
             <li><a href="/splitsheets">📄 Splitsheets</a></li>
             <li><a href="/calendar">📅 Calendario</a></li>
             <li><a href="/checklist">✅ Checklist</a></li>
+            <li><a href="/tools">🧰 Tools</a></li>
             <li><a href="/settings">⚙️ Config</a></li>
             <li><a href="/auth/logout" style="color: #ff6b6b;">🚪 Salir</a></li>
         <% } else { %>
